<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context=".activities.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <ImageView
                    style="@style/parent"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="login background" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <ImageView
                    style="@style/headerText"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="WePool" />

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@android:color/white">

                    <LinearLayout
                        style="@style/linearParent"
                        android:background="@android:color/white"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:text="@string/login_text"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/email"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/enter_email"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent">

                            <EditText
                                android:id="@+id/pass"
                                style="@style/modifiedEditText"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:hint="@string/enter_pass"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/sendOtpBtn"
                            style="@style/loginButton"
                            android:text="@string/login_text"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/registerTv"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/sign_up"
                            android:layout_marginTop="@dimen/loginViewsMargin" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>