<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Welcome, Tanmay!"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginStart="@dimen/loginViewsMargin"
        android:textSize="@dimen/homeCardView_textSize"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:elevation="5dp"
        android:layout_margin="@dimen/loginViewsMargin"
        app:cardCornerRadius="@dimen/homeCardRadius">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/distance_tv"
                style="@style/cardView_text"
                tools:text="Distance Travelled: 20KM" />

            <TextView
                android:id="@+id/swipe_time_tv"
                style="@style/cardView_text"
                tools:text="Swipe In Time: 10:27AM" />

            <TextView
                android:id="@+id/total_time_tv"
                style="@style/cardView_text"
                tools:text="Today's Total Time: 3hr48min" />

            <TextView
                android:id="@+id/curr_checkin_tv"
                style="@style/cardView_text"
                tools:text="Currently Checked In: CMC" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/loginViewsMargin"
        app:cardCornerRadius="@dimen/homeCardRadius">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

           <TextView
               android:text="@string/checkIn"
               tools:text="Check In"
               style="@style/home_text_option" />

            <ImageView
                android:src="@drawable/ic_checkin_24dp_primary"
                style="@style/home_image_option" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/loginViewsMargin"
        android:layout_marginEnd="@dimen/loginViewsMargin"
        app:cardCornerRadius="@dimen/homeCardRadius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/reports"
                tools:text="Reports"
                style="@style/home_text_option" />

            <ImageView
                android:src="@drawable/ic_reports_24dp_primary"
                style="@style/home_image_option"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/loginViewsMargin"
        android:layout_marginEnd="@dimen/loginViewsMargin"
        android:layout_marginTop="@dimen/loginViewsMargin"
        app:cardCornerRadius="@dimen/homeCardRadius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/adminNotes"
                tools:text="Admin Notes"
                style="@style/home_text_option" />

            <ImageView
                android:src="@drawable/ic_baseline_notes_24"
                style="@style/home_image_option"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.ebanx.swipebtn.SwipeButton
        android:id="@+id/swipeButton"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        app:button_background="@drawable/shape_button"
        app:button_bottom_padding="20dp"
        app:button_image_disabled="@drawable/ic_baseline_chevron_right_24"
        app:button_image_enabled="@drawable/ic_baseline_power_settings_new_24"
        app:button_left_padding="20dp"
        app:button_right_padding="20dp"
        app:button_top_padding="20dp"
        app:inner_text="Swipe In"
        app:inner_text_background="@drawable/shape_rounded_40dp"
        app:inner_text_bottom_padding="18dp"
        app:inner_text_color="@android:color/white"
        app:inner_text_size="16sp"
        app:inner_text_top_padding="18dp" />

</LinearLayout>